# yfinance_portfolio_builder

./: README.md  assignement.md  pyproject.toml
yfinance_portfolio_builder/: data_loader.py  financial_asset.py  portfolio.py  position.py  quote.py  strategies.py
yfinance_portfolio_builder/example/: main.py
